fix z-index on navigation for larger screens

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -105,7 +105,7 @@ $panel-width: 70vw;
 @media screen and (min-width: $md) {
   .navigation {
     pointer-events: all;
-    z-index: 1;
+    z-index: 2;
     height: auto;
   }
   .hamburger {
